--- a/Kuroba/app/src/main/AndroidManifest.xml
+++ b/Kuroba/app/src/main/AndroidManifest.xml
@@ -128,6 +128,9 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                 <data android:host="vhschan.org" />
                 <data android:host="www.vhschan.org" />
 
+                <data android:host="1500chan.org" />
+                <data android:host="www.1500chan.org" />
+
                 <data android:host="archived.moe" />
                 <data android:host="www.archived.moe" />
 
